# llm-context-processor

./: .gitignore  DISTRIBUTION_GUIDE.md  GIT_SETUP_GUIDE.md  INSTALL.md  README.md  pyproject.toml  requirements.txt  setup.py
llm_context_processor/: __init__.py  __main__.py  cli.py  config.py  core.py
llm_context_processor/extractors/: __init__.py  base.py  markitdown_extractor.py
llm_context_processor/outputs/: __init__.py  json_generator.py
llm_context_processor/utils/: __init__.py  file_utils.py  sanitizer.py
tests/: test_document.txt
tests/test_folder/subfolder/: file2.txt
